--- a/pyproject.toml
+++ b/pyproject.toml
@@ -12,6 +12,7 @@ pytest = "^7.4.3"
 mypy = "^1.7.1"
 flake8 = "^6.1.0"
 black = "^23.11.0"
+accessify = "^0.3.1"
 
 
 [tool.poetry.group.dev.dependencies]
